<resources>
    <string name="app_name">Zırh Grup</string>
    <string name="ElevatorListButton">Elevator list</string>
    <string name="prompt_email">Email</string>
    <string name="button_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="addElevator">Add Elevator</string>
    <string name="addUserText">Add User</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="button_signup">Add New User</string>
    <string name="error_nameEmpty">Name required</string>
    <string name="error_nameShort">Name too short</string>
    <string name="error_surnameEmpty">Surname required</string>
    <string name="error_surnameShort">Surname too short</string>
    <string name="error_emailEmpty">Email required</string>
    <string name="error_emailMatch">Email not valid</string>
    <string name="user_exist">User already exist</string>
    <string name="userRegister_success">Register successful</string>
    <string name="forgot_password">Forgot password</string>
    <string name="resetMail_Succes">Email sent successfully</string>
    <string name="resetMail_Fail">Email sent failed</string>
    <string name="login_error">Email or password is wrong</string>
    <string name="error_passwordEmpty">Password is empty</string>
    <string name="button_logout">Logout</string>
    <string name="empty">Can not be empty</string>
    <string name="button_location">Set elevator location</string>
    <string name="location_information">Location information</string>
    <string name="save_success">Saved successfully</string>
    <string name="upload_starting">"Upload starting please wait"</string>
    <string name="select_two_photo">Please select only 2 photo</string>
    <string name="photo_one">Photo 1</string>
    <string name="photo_tow">Photo 2</string>
    <string name="prompt_phone">Phone number</string>
    <string name="list_user">List Users</string>
    <string name="ban_success">Banned successfully</string>
    <string name="unban_success">Unbanned successfully</string>
    <string name="workingCapacity">Working Capacity</string>
    <string name="workingEngineNumber">Number of working engine</string>
    <string name="workingEngine">Working engine</string>
    <string name="workingHeight">Working Height (cm)</string>
    <string name="workingHeight2">Working Height</string>
    <string name="SelectPhoto">Select photo</string>
    <string name="Width">Width</string>
    <string name="height">Height</string>
    <string name="platformSize">Platform size (cm)</string>
    <string name="platformSize2">Platform size</string>
    <string name="stainless_paint">Stainless paint</string>
    <string name="static_paint">Static paint</string>
    <string name="stairs_type">Stairs type</string>
    <string name="horizontal_type">Horizontal type</string>
    <string name="serial_no">Serial no</string>
    <string name="customer_ares">Customer Informations</string>
    <string name="location_permission">Please check your location permissions</string>
    <string name="location_error">Please get elevator location</string>
    <string name="elevator_exist">Elevator exist with this serial ID</string>
    <string name="serial_length">Serial id have to 7 characters</string>
    <string name="serial_error">"Format must be : 14-1234 "</string>
    <string name="customer_info">Customer Info</string>
    <string name="details">Details</string>
    <string name="createTime">Create Time</string>
    <string name="lastPeriodic">Last maintenance</string>
    <string name="paintType">Paint type</string>
    <string name="serviceInfo">Service Information</string>
    <string name="notExistUser">"There does not exist user "</string>
    <string name="job_description">Job Description</string>
    <string name="changed_parts">Changed Parts</string>
    <string name="add_part">Add Part</string>
    <string name="save">Save</string>
    <string name="part_name">Part Name</string>
    <string name="error_charLength">Must be at least</string>
    <string name="delete">Delete</string>
    <string name="error">Something went wrong</string>
    <string name="customMaintenance">Custom Maintenance</string>
    <string name="periodicMaintenance">Periodic Maintenance</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="owner">Owner</string>
    <string name="maintenances">Maintenances</string>
    <string name="blanks">Please fill all blanks</string>
    <string name="select_photo">Please select photo</string>
    <string name="select_elevators">Select two elevator photo</string>
    <string name="addPeriodic">Add Periodic\nMaintenance</string>
    <string name="addCustom">Add Custom\nMaintenance</string>
    <string name="emptyParts">Are you sure save any changed parts ?</string>
    <string name="cancel">Cancel</string>
    <string name="error_phone">Phone number is invalid (Starts with 0)</string>

    <string-array name="HorizontalTypeArray">
        <item>Hydraulic</item>
        <item>Screwed</item>
    </string-array>

    <string-array name="StairsTypeArray">
        <item>Eco</item>
        <item>Gold</item>
        <item>Premium</item>
    </string-array>

</resources>