<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainPageFragment" android:id="@+id/ConstraintLayout">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:text="@string/addElevator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/addElevatorButton"/>
        <Button
                android:text="@string/ElevatorListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/elevatorListButton"/>
        <Button
                android:text="@string/addUserText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/addUserButton"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>