<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".admin.AddUserFragment">


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout10"
            android:hint="@string/prompt_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addUser_editTextName"
                android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout10" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp" android:layout_marginEnd="15dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp" android:id="@+id/textInputLayout11"
            android:hint="@string/prompt_surname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addUser_editTextSurname"
                android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout11" android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout12"
            android:hint="@string/prompt_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addUser_editTextEmail"
                android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout12" android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout13"
            android:hint="@string/prompt_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:id="@+id/addUser_editTextPhone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/addUser_singupButton"
            android:text="@string/button_signup"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout13" android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>