<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity" android:background="@color/black">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/logo" android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="25dp"
            app:layout_constraintHorizontal_bias="0.495"
            android:layout_marginRight="3dp" android:layout_marginEnd="3dp" android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp" android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginTop="50dp"
            android:id="@+id/textInputLayout4"
            app:startIconDrawable="@drawable/ic_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:hint="@string/prompt_email"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="20dp" android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp">

        <com.google.android.material.textfield.TextInputEditText
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/editTextEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout2"
            app:counterEnabled="true"
            app:counterMaxLength="6"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_password"
            app:endIconMode="password_toggle"

            android:hint="@string/prompt_password"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp">

        <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:maxLength="7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/editTextPassword"/>    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/button_login"
            android:layout_width="250dp"
            android:layout_height="50dp" android:id="@+id/button"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:backgroundTint="#FA1B1B" app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            android:layout_marginTop="30dp"/>
    <TextView
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/forgotPasswordTextView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="40dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>