<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".AddMaintenanceFragment"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView6"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textInputLayout15"
                android:hint="@string/job_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">


            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="4"
                    android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
                android:text="@string/changed_parts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout15"
                android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" android:id="@+id/textInputLayout16"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textInputLayout17"
                android:hint="hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout16"
                android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/button"
                android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
                android:text="@string/add_part"
                android:layout_width="wrap_content"
                android:layout_height="0dp" android:id="@+id/button"
                android:textSize="12sp"
                android:ellipsize="none"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout17"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout17"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout16"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/addedPartsLinearLayout"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout17"
                android:layout_marginTop="10dp" app:layout_constraintStart_toStartOf="@+id/textInputLayout17"
                app:layout_constraintEnd_toEndOf="@+id/button">
        </LinearLayout>
        <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button2"
                app:layout_constraintTop_toBottomOf="@+id/addedPartsLinearLayout"
                android:layout_marginTop="10dp" app:layout_constraintStart_toStartOf="@+id/textInputLayout17"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                app:layout_constraintStart_toEndOf="@+id/button2" app:layout_constraintTop_toTopOf="@+id/button2"
                app:layout_constraintBottom_toBottomOf="@+id/button2" android:layout_marginStart="10dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="60dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>